--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -14,33 +14,33 @@
 				<div class="nav-item d-none d-lg-flex me-3">
 					<div class="btn-list">
 						<a href="https://github.com/tabler/tabler" class="btn" target="_blank" rel="noreferrer"> <!-- Download SVG icon from http://tabler-icons.io/i/brand-github --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-          </svg> Source code
+			<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+			<path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+		  </svg> Source code
 						</a> <a href="https://github.com/sponsors/codecalm" class="btn" target="_blank" rel="noreferrer"> <!-- Download SVG icon from http://tabler-icons.io/i/heart --> <svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" />
-          </svg> Sponsor
+			<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+			<path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" />
+		  </svg> Sponsor
 						</a>
 					</div>
 				</div>
 				<div class="d-none d-lg-flex">
 					<a href="?theme=dark" class="nav-link px-0 hide-theme-dark" title="Enable dark mode" data-bs-toggle="tooltip" data-bs-placement="bottom"> <!-- Download SVG icon from http://tabler-icons.io/i/moon --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" />
-        </svg>
+		  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+		  <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" />
+		</svg>
 					</a> <a href="?theme=light" class="nav-link px-0 hide-theme-light" title="Enable light mode" data-bs-toggle="tooltip" data-bs-placement="bottom"> <!-- Download SVG icon from http://tabler-icons.io/i/sun --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
-          <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" />
-        </svg>
+		  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+		  <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+		  <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" />
+		</svg>
 					</a>
 					<div class="nav-item dropdown d-none d-md-flex me-3">
 						<a href="#" class="nav-link px-0" data-bs-toggle="dropdown" tabindex="-1" aria-label="Show notifications"> <!-- Download SVG icon from http://tabler-icons.io/i/bell --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M10 5a2 2 0 1 1 4 0a7 7 0 0 1 4 6v3a4 4 0 0 0 2 3h-16a4 4 0 0 0 2 -3v-3a7 7 0 0 1 4 -6" />
-            <path d="M9 17v1a3 3 0 0 0 6 0v-1" />
-          </svg> <span class="badge bg-red"></span>
+			<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+			<path d="M10 5a2 2 0 1 1 4 0a7 7 0 0 1 4 6v3a4 4 0 0 0 2 3h-16a4 4 0 0 0 2 -3v-3a7 7 0 0 1 4 -6" />
+			<path d="M9 17v1a3 3 0 0 0 6 0v-1" />
+		  </svg> <span class="badge bg-red"></span>
 						</a>
 						<div class="dropdown-menu dropdown-menu-arrow dropdown-menu-end dropdown-menu-card">
 							<div class="card">
@@ -59,9 +59,9 @@
 											</div>
 											<div class="col-auto">
 												<a href="#" class="list-group-item-actions"> <!-- Download SVG icon from http://tabler-icons.io/i/star --> <svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-                      </svg>
+						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+						<path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+					  </svg>
 												</a>
 											</div>
 										</div>
@@ -77,9 +77,9 @@
 											</div>
 											<div class="col-auto">
 												<a href="#" class="list-group-item-actions show"> <!-- Download SVG icon from http://tabler-icons.io/i/star --> <svg xmlns="http://www.w3.org/2000/svg" class="icon text-yellow" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-                      </svg>
+						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+						<path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+					  </svg>
 												</a>
 											</div>
 										</div>
@@ -95,9 +95,9 @@
 											</div>
 											<div class="col-auto">
 												<a href="#" class="list-group-item-actions"> <!-- Download SVG icon from http://tabler-icons.io/i/star --> <svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-                      </svg>
+						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+						<path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+					  </svg>
 												</a>
 											</div>
 										</div>
@@ -113,9 +113,9 @@
 											</div>
 											<div class="col-auto">
 												<a href="#" class="list-group-item-actions"> <!-- Download SVG icon from http://tabler-icons.io/i/star --> <svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-                      </svg>
+						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+						<path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+					  </svg>
 												</a>
 											</div>
 										</div>
@@ -142,8 +142,8 @@
 							<span class="nav-link-icon d-md-none d-lg-inline-block">
 								<!-- Download SVG icon from http://tabler-icons.io/i/lifebuoy -->
 								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  					<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  					<path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+									  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									  <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
 									<path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
 									<path d="M15 15l3.35 3.35" />
 									<path d="M9 15l-3.35 3.35" />
@@ -162,65 +162,76 @@
 					</li>
 					<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
 								<!-- Download SVG icon from http://tabler-icons.io/i/package --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M12 3l8 4.5l0 9l-8 4.5l-8 -4.5l0 -9l8 -4.5" />
-                  <path d="M12 12l8 -4.5" />
-                  <path d="M12 12l0 9" />
-                  <path d="M12 12l-8 -4.5" />
-                  <path d="M16 5.25l-8 4.5" />
-                </svg>
+				  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+				  <path d="M12 3l8 4.5l0 9l-8 4.5l-8 -4.5l0 -9l8 -4.5" />
+				  <path d="M12 12l8 -4.5" />
+				  <path d="M12 12l0 9" />
+				  <path d="M12 12l-8 -4.5" />
+				  <path d="M16 5.25l-8 4.5" />
+				</svg>
 						</span> <span class="nav-link-title"> Job Management </span>
 					</a>
 						<div class="dropdown-menu show">
 							<div class="dropdown-menu-columns">
 								<div class="dropdown-menu-column">
-									<a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Job List </a> <a class="dropdown-item" href="/views/wrk/bat/WRKBAT002M0.html"> Job Runs </a> <a class="dropdown-item" href="/views/wrk/bat/WRKBAT003M0.html"> Job Results </a>
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/bat/WRKBAT001M0');"> Job List </a> 
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/bat/WRKBAT002M0');"> Job Runs </a> 
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/bat/WRKBAT003M0');"> Job Results </a>
 								</div>
 							</div>
 						</div></li>
 					<li class="nav-item active dropdown"><a class="nav-link dropdown-toggle" href="#navbar-layout" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="true"> <span class="nav-link-icon d-md-none d-lg-inline-block">
 								<!-- Download SVG icon from http://tabler-icons.io/i/layout-2 --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M4 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-                  <path d="M4 13m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-                  <path d="M14 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-                  <path d="M14 15m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-                </svg>
+				  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+				  <path d="M4 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
+				  <path d="M4 13m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
+				  <path d="M14 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
+				  <path d="M14 15m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
+				</svg>
 						</span> <span class="nav-link-title"> Settlement </span>
 					</a>
 						<div class="dropdown-menu">
 							<div class="dropdown-menu-columns">
 								<div class="dropdown-menu-column">
-									<a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Account Code </a> <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Journal Rules </a><a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Journal Result </a> <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Insurance Summary </a> <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Financial Statement </a> <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Audit Logs </a>
+									<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/MST/SYS/MSTSYS002M0'); "> Account Code </a> 
+									<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/MST/SYS/MSTSYS001M0'); "> Journal Rules </a>
+									<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZJNL001M0'); "> Journal Result </a> 
+									<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZJNL002M0'); "> Insurance Summary </a> 
+									<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZJNL003M0'); "> Financial Statement </a> 
+									<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/FST/BIZFST001MO'); "> Audit Logs </a>
 								</div>
 							</div></li>
 					<li class="nav-item active dropdown"><a class="nav-link dropdown-toggle" href="#navbar-extra" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
 								<!-- Download SVG icon from http://tabler-icons.io/i/ghost --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M5 11a7 7 0 0 1 14 0v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-7" />
-                  <path d="M10 10l.01 0" />
-                  <path d="M14 10l.01 0" />
-                  <path d="M10 14a3.5 3.5 0 0 0 4 0" />
-                </svg>
+				  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+				  <path d="M5 11a7 7 0 0 1 14 0v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-7" />
+				  <path d="M10 10l.01 0" />
+				  <path d="M14 10l.01 0" />
+				  <path d="M10 14a3.5 3.5 0 0 0 4 0" />
+				</svg>
 						</span> <span class="nav-link-title"> Admin </span>
 					</a>
 						<div class="dropdown-menu">
 							<div class="dropdown-menu-columns">
 								<div class="dropdown-menu-column">
-									<a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Users </a> <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Code </a><a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Services </a>
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/FST/BIZFST002MO'); "> Users </a>
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/INS/BIZINS001MO'); "> Code </a>
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/INS/BIZINS002MO'); "> Services </a>
 								</div>
 							</div></li>
 					<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#navbar-extra" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
 								<!-- Download SVG icon from http://tabler-icons.io/i/star --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-                </svg>
+				  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+				  <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+				</svg>
 						</span> <span class="nav-link-title"> Product Admin </span>
 					</a>
 						<div class="dropdown-menu">
 							<div class="dropdown-menu-columns">
 								<div class="dropdown-menu-column">
-									<a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Company </a> <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Users </a><a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Services </a>
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/INS/BIZINS003MO'); "> Company </a> 
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/ADT/BIZADT001MO'); "> Users </a>
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/FST/BIZFST002MO'); "> Services </a>
 								</div>
 							</div></li>
 				</ul>
