--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -142,8 +142,8 @@
 							<span class="nav-link-icon d-md-none d-lg-inline-block">
 								<!-- Download SVG icon from http://tabler-icons.io/i/lifebuoy -->
 								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-									  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-									  <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
 									<path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
 									<path d="M15 15l3.35 3.35" />
 									<path d="M9 15l-3.35 3.35" />
@@ -160,17 +160,21 @@
 							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL004M0');"> Load history </a>
 						</div>
 					</li>
-					<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
-								<!-- Download SVG icon from http://tabler-icons.io/i/package --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-				  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-				  <path d="M12 3l8 4.5l0 9l-8 4.5l-8 -4.5l0 -9l8 -4.5" />
-				  <path d="M12 12l8 -4.5" />
-				  <path d="M12 12l0 9" />
-				  <path d="M12 12l-8 -4.5" />
-				  <path d="M16 5.25l-8 4.5" />
-				</svg>
-						</span> <span class="nav-link-title"> Job Management </span>
-					</a>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false">
+							<span class="nav-link-icon d-md-none d-lg-inline-block">
+								<!-- Download SVG icon from http://tabler-icons.io/i/package -->
+								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<path d="M12 3l8 4.5l0 9l-8 4.5l-8 -4.5l0 -9l8 -4.5" />
+									<path d="M12 12l8 -4.5" />
+									<path d="M12 12l0 9" />
+									<path d="M12 12l-8 -4.5" />
+									<path d="M16 5.25l-8 4.5" />
+								</svg>
+							</span>
+							<span class="nav-link-title"> Job Management </span>
+						</a>
 						<div class="dropdown-menu show">
 							<div class="dropdown-menu-columns">
 								<div class="dropdown-menu-column">
@@ -179,17 +183,22 @@
 									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/bat/WRKBAT003M0');"> Job Results </a>
 								</div>
 							</div>
-						</div></li>
-					<li class="nav-item active dropdown"><a class="nav-link dropdown-toggle" href="#navbar-layout" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="true"> <span class="nav-link-icon d-md-none d-lg-inline-block">
-								<!-- Download SVG icon from http://tabler-icons.io/i/layout-2 --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-				  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-				  <path d="M4 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-				  <path d="M4 13m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-				  <path d="M14 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-				  <path d="M14 15m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-				</svg>
-						</span> <span class="nav-link-title"> Settlement </span>
-					</a>
+						</div>
+					</li>
+					<li class="nav-item active dropdown">
+						<a class="nav-link dropdown-toggle" href="#navbar-layout" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="true">
+							<span class="nav-link-icon d-md-none d-lg-inline-block">
+								<!-- Download SVG icon from http://tabler-icons.io/i/layout-2 -->
+								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<path d="M4 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
+									<path d="M4 13m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
+									<path d="M14 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
+									<path d="M14 15m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
+								</svg>
+							</span>
+							<span class="nav-link-title"> Settlement </span>
+						</a>
 						<div class="dropdown-menu">
 							<div class="dropdown-menu-columns">
 								<div class="dropdown-menu-column">
@@ -200,17 +209,23 @@
 									<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZJNL003M0'); "> Financial Statement </a> 
 									<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/FST/BIZFST001MO'); "> Audit Logs </a>
 								</div>
-							</div></li>
-					<li class="nav-item active dropdown"><a class="nav-link dropdown-toggle" href="#navbar-extra" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
-								<!-- Download SVG icon from http://tabler-icons.io/i/ghost --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-				  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-				  <path d="M5 11a7 7 0 0 1 14 0v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-7" />
-				  <path d="M10 10l.01 0" />
-				  <path d="M14 10l.01 0" />
-				  <path d="M10 14a3.5 3.5 0 0 0 4 0" />
-				</svg>
-						</span> <span class="nav-link-title"> Admin </span>
-					</a>
+							</div>
+						</div>
+					</li>
+					<li class="nav-item active dropdown">
+						<a class="nav-link dropdown-toggle" href="#navbar-extra" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false">
+							<span class="nav-link-icon d-md-none d-lg-inline-block">
+								<!-- Download SVG icon from http://tabler-icons.io/i/ghost -->
+								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<path d="M5 11a7 7 0 0 1 14 0v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-7" />
+									<path d="M10 10l.01 0" />
+									<path d="M14 10l.01 0" />
+									<path d="M10 14a3.5 3.5 0 0 0 4 0" />
+								</svg>
+							</span>
+							<span class="nav-link-title"> Admin </span>
+						</a>
 						<div class="dropdown-menu">
 							<div class="dropdown-menu-columns">
 								<div class="dropdown-menu-column">
@@ -218,14 +233,20 @@
 									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/INS/BIZINS001MO'); "> Code </a>
 									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/INS/BIZINS002MO'); "> Services </a>
 								</div>
-							</div></li>
-					<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#navbar-extra" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
-								<!-- Download SVG icon from http://tabler-icons.io/i/star --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-				  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-				  <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-				</svg>
-						</span> <span class="nav-link-title"> Product Admin </span>
-					</a>
+							</div>
+						</div>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#navbar-extra" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false">
+							<span class="nav-link-icon d-md-none d-lg-inline-block">
+								<!-- Download SVG icon from http://tabler-icons.io/i/star -->
+								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+								</svg>
+							</span>
+							<span class="nav-link-title"> Product Admin </span>
+						</a>
 						<div class="dropdown-menu">
 							<div class="dropdown-menu-columns">
 								<div class="dropdown-menu-column">
@@ -233,7 +254,9 @@
 									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/ADT/BIZADT001MO'); "> Users </a>
 									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/FST/BIZFST002MO'); "> Services </a>
 								</div>
-							</div></li>
+							</div>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
