--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -330,9 +330,13 @@
 										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/MST/SYS/MSTSYS002M0'); "> Account Code </a> 
 										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/MST/SYS/MSTSYS001M0'); "> Journal Rules </a>
 										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZJNL001M0'); "> Journal Result </a> 
-										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZJNL002M0'); "> Insurance Summary </a> 
-										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZJNL003M0'); "> Financial Statement </a> 
-										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/FST/BIZFST001MO'); "> Audit Logs </a>
+										
+										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZINS001M0'); "> Insurance Summary(BEL) </a> 
+										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZJNL002M0'); "> Insurance Summary(RA) </a> 
+										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/JNL/BIZJNL003M0'); "> Insurance Summary(CSM) </a> 
+
+										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/FST/BIZFST001M0'); "> Finance Statement(BS) </a> 
+										<a class="dropdown-item" href="#"  onClick="javascript:goMenuPage('/views/BIZ/FST/BIZFST002MO'); "> Finance Statement(PL) </a>
 									</div>
 								</div></li>
 						<li class="nav-item active dropdown"><a class="nav-link dropdown-toggle" href="#navbar-extra" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
@@ -367,7 +371,7 @@
 										<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/ADT/BIZADT001MO'); "> Users </a>
 										<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/BIZ/FST/BIZFST002MO'); "> Services </a>
 									</div>
-								</div></li>
+							</div></li>
 					</ul>
 				</div>
 			</div>
