--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -136,8 +136,8 @@
 							</span>
 							<span th:text="${menu.menuNmEng}" class="nav-link-title"></span>
 						</a>
-						<div th:if="${menu.subMenuList.size ge 0}" class="dropdown-menu show">
-							<div th:each="subMenu:${menu.subMenuList}">
+						<div th:if="${menu.adamsMenuDTOList.size ge 0}" class="dropdown-menu show">
+							<div th:each="subMenu:${menu.adamsMenuDTOList}">
 								<a th:text="${subMenu.menuNmEng}" class="dropdown-item" href="#" th:onClick="javascript:goMenuPage([[${subMenu.pgmUrl}]]);"></a>
 							</div>
 						</div>
