--- a/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
+++ b/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
@@ -42,7 +42,7 @@
                     </button>
                   </div>
                   <div class="col text-end">
-                    <button
+                    <!-- <button
                       form="new-form"
                       type="button"
                       class="btn btn-primary"
@@ -52,7 +52,7 @@
                       onsubmit="return false;"
                     >
                       Create
-                    </button>
+                    </button> -->
                     <button
                       type="button"
                       class="btn btn-lime"
